# Algorithm

./: CMakeLists.txt  main.cpp
Src/Include/: NormalSort.hpp  StringAlgorithm.hpp
Src/Source/: NormalSort.cpp  StringAlgorithm.cpp
Tests/: CMakeLists.txt  NormalSortTest.cpp  StringAlgorithmTest.cpp
